<resources>
    <string name="app_name">HELARTICO</string>
    <string name="img_login">logo</string>
    <string name="btn_registro">Nuevo Cliente</string>
    <string name="edT_email">Correo</string>
    <string name="edT_pass">Contraseña</string>
    <string name="btn_ingreso">Ingresar</string>
    <string name="btn_olvidar">Olvidé mi contraseña</string>
    <string name="TView_bienvenida">¡Bienvenido!</string>
    <string name="img_alt">Cono utilizado como Logo</string>
</resources>