<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground3"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="379dp"
        android:layout_height="268dp"
        android:contentDescription="@string/img_alt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/helarticologo1" />

    <Button
        android:id="@+id/btnregistro"
        android:layout_width="239dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/btnclaro"
        android:text="@string/btn_registro"
        android:textColor="@color/textBtn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="234dp"
        android:layout_height="52dp"
        android:autofillHints="Documento"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/edT_email"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512" />

    <EditText
        android:id="@+id/Text2pass"
        android:layout_width="235dp"
        android:layout_height="51dp"
        android:autofillHints="password"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/edT_pass"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/hintColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.617" />

    <Button
        android:id="@+id/btnOlvidar"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/main"
        android:text="@string/btn_olvidar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorLink="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/Btningresar"
        android:layout_width="239dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/btnclaro"
        android:shadowColor="@color/dark_gray"
        android:text="@string/btn_ingreso"
        android:textColor="@color/textBtn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.73" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TView_bienvenida"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.422" />


</androidx.constraintlayout.widget.ConstraintLayout>